--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ body {
   margin: 0;
   display: flex;
 }
+body > div {
+  flex-basis: 100%;
+}
 #editor {
   height: 100%;
   flex-grow: 3;
@@ -33,7 +36,7 @@ body {
   <div id="output-container">
     <div id="output"></div>
   </div>
-  <script src="/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
   <script unsafe-eval src="/script.js" type="text/javascript"></script>
 </body>
 </html>
