--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body > div {
 }
 #output-container {
   background-color: rgb(47, 49, 42);
+  border-left: 3px solid gray;
   color: white;
   height: 100%;
   flex-grow: 1;
@@ -29,7 +30,7 @@ body > div {
   padding: 1em;
   overflow: scroll;
 }
-  </style>
+</style>
 </head>
 <body>
   <div id="editor"></div>
