--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>_</title>
 <style type="text/css" media="screen">
 * {
   box-sizing: border-box;
@@ -14,28 +15,46 @@ body {
 body > div {
   flex-basis: 100%;
 }
+.column {
+  display: flex;
+  flex-direction: column;
+}
 #editor {
   height: 100%;
-  flex-grow: 3;
   overflow: scroll;
 }
 #output-container {
   background-color: rgb(47, 49, 42);
-  border-left: 3px solid gray;
+  border-top: 3px solid gray;
   color: white;
-  height: 100%;
-  flex-grow: 1;
+  height: 50%;
   font-family: monospace;
-  max-width: 30%;
   padding: 1em;
   overflow: scroll;
+}
+#clock {
+  background-color: rgb(47, 49, 42);
+  border-left: 3px solid gray;
+  font-family: monospace;
+  height: 100%;
+  color: teal;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 </style>
 </head>
 <body>
-  <div id="editor"></div>
-  <div id="output-container">
-    <div id="output"></div>
+  <div class="column">
+    <div id="editor"></div>
+    <div id="output-container">
+      <div id="output"></div>
+    </div>
+  </div>
+  <div class="column">
+    <div id="clock">
+      <h1 id="clock-dt">--:--:--</h1>
+    </div>
   </div>
   <script src="/node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
   <script unsafe-eval src="/script.js" type="text/javascript"></script>
