--- a/index.html
+++ b/index.html
@@ -1,48 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>_</title>
-<style type="text/css" media="screen">
-* {
-  box-sizing: border-box;
-}
-body {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  display: flex;
-}
-body > div {
-  flex-basis: 100%;
-}
-.column {
-  display: flex;
-  flex-direction: column;
-}
-#editor {
-  height: 100%;
-  overflow: scroll;
-}
-#output-container {
-  background-color: rgb(47, 49, 42);
-  border-top: 3px solid gray;
-  color: white;
-  height: 50%;
-  font-family: monospace;
-  padding: 1em;
-  overflow: scroll;
-}
-#clock {
-  background-color: rgb(47, 49, 42);
-  border-left: 3px solid gray;
-  font-family: monospace;
-  height: 100%;
-  color: teal;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-</style>
+  <title>_</title>
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+  <link href="/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class="column">
