add some shortcuts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div id="clock">
       <h1 id="clock-dt">--:--:--</h1>
     </div>
+    <div id="shortcuts">
+      <h1>Shortcuts</h1>
+      <p id="shortcut:title"></p>
+      <p id="shortcut:content"></p>
+    </div>
   </div>
   <script src="/node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
   <script unsafe-eval src="/script.js" type="text/javascript"></script>
